# DIID

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7eb0c9b2b856_initial.py  a1b2c3d4e5f6_add_document_file_fields.py  b2c3d4e5f6a7_add_document_types.py  c3d4e5f6a7b8_add_key_entries.py  d4e5f6a7b8c9_add_stashes.py  e5f6a7b8c9d0_add_user_role.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  cards.py  documents.py  keys.py  passwords.py  profiles.py  router.py  search.py  settings.py  stashes.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/crud/: base.py  card.py  document.py  key_entry.py  password_entry.py  profile.py  search.py  stash.py
backend/app/models/: __init__.py  card.py  document.py  key_entry.py  password_entry.py  profile.py  session.py  stash.py  user.py  user_settings.py
backend/app/schemas/: auth.py  card.py  document.py  key_entry.py  password_entry.py  profile.py  search.py  settings.py  stash.py
backend/scripts/: init_vault.py
backend/tests/: conftest.py  test_auth.py
desktop/: backend.spec  backend_runner.py  build_mac.sh  build_win.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/installer/: uninstall.nsi
desktop/src-tauri/src/: lib.rs  main.rs
docs/tickets/: DIID-001-multiuser.md  DIID-003-kazakh-lang.md  (+7 more)
frontend/: .env.desktop  index.html  package-lock.json  package.json  vite.config.ts
(+66 files in other folders)
