[package]
name = "diid-desktop"
version = "1.0.1"
description = "DIID — Personal Document Vault (Desktop)"
authors = ["1d1l1r"]
edition = "2021"

[lib]
name = "diid_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
